<package>
  <name>suitesparse</name>
  <version>4.5.3</version>
  <description>suitesparse</description>
  <author email="davis@cise.ufl.edu">Dr. Tim Davis</author>
  <maintainer email="kumarsha@cs.cmu.edu">Kumar Shaurya Shankar</maintainer>

  <license>LGPLv3 or later</license>

  <url type="website">https://www.cise.ufl.edu/research/sparse/SuiteSparse/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>lapack</build_depend>
  <build_depend>blas</build_depend>
  <build_depend>gfortran</build_depend>

</package>
